<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上杭州</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="spinner_name">特色店推荐</string>
    <string name="gw_tg">团购</string>
    <string name="gw_cx">促销</string>
    <string name="gw_pp">品牌</string>
    <string name="str_ktv">KTV</string>
    <string name="str_bar">酒吧</string>
    <string name="str_yy">影院</string>
    <string name="str_club">俱乐部</string>
    <string name="curbuttonText">Current</string>
    <string name="allbuttonText">Allattractions</string>
    <string name="suoding">lockposition</string>
    <string name="allSTitle">All attractions</string>
	<string name="backText">Back</string>
	<string name="camera">TakePohtos</string>
	<string name="selectLan">Language</string>
	<string name="Latitude">Latitude</string>
	<string name="Longitude">Longitude</string>
	<string name="GPSFailed">GPS data acquisition failure!</string>
	<string name="curs">Current attractions</string>
	<string name="showdis">Distance of this scenic spot:</string>
	<string name="unit">metre</string>
	<string name="sorrynocur">Sorry, no current attractions!</string>
	<string name="LanTitle">Please select a language</string>
	<string name="userbackBt">Feedback</string>
	<string name="userback">User feedback</string>
	<string name="welcomecontent">Welcome your valuable comments and suggestions,Every word you left will be used to improve our services.</string>
	<string name="inputjianyi">Please enter your feedback(500 words within words)</string>
	<string name="lxmail">Contact Email：</string>
	<string name="submit">Submit</string>
	<string name="cancel">Cancel</string>
	<string name="exit">Exit</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="about">About</string>
	<string name="exitdialog">Are you sure you want to exit?</string>
	<string name="opengps">Please ensure that the GPS is turned on</string>
	<string name="nettitle">Network error </string>
	<string name="netmessage">Network connection fails, make sure the network connection</string>
	<string name="emailsuccess">Mail sent successfully</string>
	<string name="more">More...</string>
	<string name="findrange">SearchRange</string>
	<string name="share">Share</string>
	<string name="setting">Set Mode</string>
	<string name="modeDao">Guid Mode</string>
	<string name="modeSelf">Self Mode</string>

	<string name="APIMapKey">0ZLCAbTwlGJYjoNpl_9OyZhB3qyPXww6UC9-I5g</string>
	<string name="loading">Loading...</string>
	
	<string name="attention">Note</string>
    <string name="delete_all">Do you want to delete this microblogging?</string>
    <string name="ok">OK</string>
    
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="share_dialog_title">Sina microblogging</string>
    <string name="please_login">Please log in!</string>
    <string name="send_sucess">Share successful!</string>
    <string name="send_failed">Share failure!</string>
    <string name="del_pic">Do you want to delete the picture?</string>
    <string name="sendweibo">Transmission,Please wait...</string>
    <string name="nosdcard">Please ensure that the memory card has been inserted!</string>
    <string name="save_failed">Failed to save the file!</string>
    
    <string name="from_photo_album">Phone album</string>
    <string name="from_camera">Phone shooting</string>
    <string name="select_method">Selection method</string>
    
    <string name="list_loadingnow">Loading in...</string>
    
    <string name="attend_error">Request fails</string>
    <string name="login_Logo">Authorize use your Sina microblogging account</string>
    <string name="auth_btn">Begin</string>
    <string name="please_reAuth">Failed to get data, please re-authorization!</string>
    <string name="app_who">BAI NA</string>
    <string name="app_about">		The electronic tour guide software is mainly related to the scenic Hangzhou West Lake and West Lake new Ten, maps and GPS positioning for clarity shows the various attractions in their own location, and for users to introduce the attractions information currently in playhope that through our efforts to bring you a pleasant play experience!</string>
    <string name="app_aboutsz">本掌上杭州软件，主要涉及杭州的一些实用信息，其中包括杭州的美食、美景、购物与娱乐等等。软件中地图、导航的开发为用户的出行提供多方面的帮助  本软件由百纳科技开发，版权所有侵权必究！</string>
    
    <string name="change_range">Screening range</string>
    <string name="range_unit">Kilometer</string>
    <string name="nowrange">Km range</string>
    <string name="call">Phone:</string>

    <string name="do_call">Make a call</string>
    <string name="see_map">View Map</string>
    <string name="no_callnumber">No telephone information</string>
    <string name="alert_select">Please select the type of service</string>
    <string name="alert_noresult">No match is found</string>
    <string name="please_enter_place">Please enter the name of the location you want to find</string>
    
    <string name="text_max">Currently has the largest number font</string>
    <string name="text_min">The current font for the minimum number</string>
    
    <string name="selectfolder">Please select from extraction path</string>
    <string name="selectfolder_default">Extract</string>
	<string name="zip_message">Extract to</string>
	<string name="zip_ok">OK</string>
	<string name="zip_cancel">Cancel</string>
	<string name="unzip_dialog_title">Unpacked, please wait ...</string>
	<string name="error">Resource error, please re-select the resource package!</string>
	<string name="selectzip">Please select the resource bundle</string>
	<string name="changezip">Change Resource Pack</string>
	
	
	<string name="select_mode">Please select mode</string>
</resources>