<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@color/lightgreen"
  >
	<TextView 
		android:text="@string/userback" 
		android:id="@+id/userback" 
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:gravity="center"
		android:textStyle="bold"
		android:textSize="20dip"
		android:textColor="@color/black"
		>
	</TextView>
	<TextView 
		android:text="@string/welcomecontent" 
		android:id="@+id/welcomecontent" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip"
		android:textColor="@color/black"
		>
	</TextView>
	<EditText 
		android:text="" 
		android:id="@+id/EditText01" 
		android:layout_width="fill_parent"
		android:layout_height="150dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		android:layout_marginTop="5dip"
		android:gravity="top"
		android:hint="@string/inputjianyi"
		>
	</EditText>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    >
	    <Button 
		android:text="@string/submit" 
		android:id="@+id/submit" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip"
		android:layout_marginRight="5dip"
		>
	</Button>
	<Button 
		android:text="@string/cancel" 
		android:id="@+id/cancel" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="10dip"
		android:layout_marginTop="5dip"
		>
	</Button>
	</LinearLayout>
	
</LinearLayout>
