<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >


     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@drawable/biaoti_bg" >

        <TextView
            android:id="@+id/fenlei_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#FFFFF0"
            android:textSize="25dip"
            android:text="娱乐" >
        </TextView>
        
         <ImageButton
            android:id="@+id/fl_back"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/back_bg" />
        
     </RelativeLayout>
     
     
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/tv_ktv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_ktv"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_bar"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_foot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_yy"
            android:textColor="@color/black"
            android:textSize="20sp" />
        
         <TextView
            android:id="@+id/tv_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_club"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    
     <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#000000" />

</LinearLayout>