<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="200dp"
    android:background="@drawable/dao_bg" >
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="3dp"
        >
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            >            
           <ImageView
                android:src="@drawable/zshz"
                android:layout_width="46dip"
                android:layout_height="46dip"
                />
            <LinearLayout 
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                >
                <TextView
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:text="@string/app_who"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:text="@string/app_aboutsz"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
    </LinearLayout>
	<ImageView
		android:id="@+id/aoubtCanclePic"
		android:layout_width="35dp"
		android:layout_height="35dp"
		android:src="@drawable/del_pic"
		android:layout_gravity="right"/>
</FrameLayout>